@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-21T08:07:28Z",
-  "count_outdated" : 222,
-  "uniques_outdated" : 157,
+  "timestamp" : "2024-01-22T16:07:32Z",
+  "count_outdated" : 223,
+  "uniques_outdated" : 158,
   "count" : 228,
   "uniques" : 163,
   "clones" : [
-    {
-      "timestamp": "2024-01-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-11T00:00:00Z",
       "count": 1,
