@@ -1,3 +1,12 @@
+2024-01-22T16:07:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7613994648 # 47
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 157 222 / 163 228
+* notice: next accum: outdated-unq outdated-all / unq all: 158 223 / 163 228
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-08] / []
+
 2024-01-21T08:07:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7599930497 # 43
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
